fix spacing on contact page

--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -1,7 +1,7 @@
 
 #contact-bg {
     background-color: var(--color-main);
-    /* height: 100vh; */
+    min-height: 150vh;
     display: flex;
     flex-direction: column;
     align-items: center;
